[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.5", features = ["bigdecimal", "postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
