[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bigdecimal = { version = "0.4.8", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["bigdecimal", "postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.45.0", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
